@startuml
' ======================
' DOMAIN LAYER
' ======================

package "Domain Layer" {

class Fish {
  - name : str
  - base_cost_per_kg : float
  - supplier_price_variance : float
}

class Supplier {
  - name : str
  - fish_price_list : Dict<String, float>
  - price_volatility : float
  - reliability : float
  - average_delay_days : float
  - quality_factor : float
  + get_price(fish: Fish) : float
  + delivery_successful() : bool
  + delivery_delay() : int
}

class InventoryItem {
  - fish : Fish
  - amount_kg : float
  - expiry_date : date
  + is_expired(current_date: date) : bool
  + reduce_stock(amount: float) : void
}

class Delivery {
  - supplier : Supplier
  - delivery_date : date
  - items : List<InventoryItem>
  + execute_delivery() : void
  + add_item(item: InventoryItem) : void
}

class Recipe {
  - name : str
  - fish : Fish
  - fish_required_kg : float
}

class MenuItem {
  - name : str
  - recipe : Recipe
  - price : float
}

class OrderItem {
  - menu_item : MenuItem
  - quantity : int
  + total_price() : float
}

class Order {
  - customer : str
  - items : List<OrderItem>
  - bill : Bill
  + total_items() : int
  + total_amount() : float
}

class Bill {
  - order_items : List<OrderItem>
  - tax_rate : float
  + total_with_tax() : float
}

class Restaurant {
  - inventory : List<InventoryItem>
  - menu : List<MenuItem>
  - orders : List<Order>
  - balance : float
  - rent : float
  + apply_scientific_forecast(mean_supply: float, supply_risk: float) : float
  + add_menu_item(menu_item: MenuItem) : void
  + remove_expired_inventory() : void
  + place_order(order: Order) : void
  + get_total_revenue() : float
  + get_inventory_status() : Dict<String, float>
}

}

' ======================
' ANALYTICS LAYER
' ======================

package "Analytics Layer" {

class DemandModel {
  - observed_data : ndarray
  - model : pm.Model
  - trace : InferenceData
  + build_model() : void
  + run_mcmc(draws: int, tune: int, chains: int, seed: int) : void
  + get_risk_metrics(threshold: float) : tuple
}

class SupplierReliabilityModel {
  - successes : int
  - total : int
  - model : pm.Model
  - trace : InferenceData
  + build_model() : void
  + run_mcmc(draws: int, tune: int, chains: int) : void
  + get_reliability() : tuple
}

class RestaurantAnalytics {
  - restaurant : Restaurant
  + total_revenue() : float
  + inventory_status() : Dict<String, float>
  + order_statistics() : Dict<String, int>
}

}

' ======================
' RELATIONSHIPS
' ======================

Supplier "1" -- "0..*" Delivery
Delivery "1" *-- "1..*" InventoryItem
InventoryItem "1" -- "1" Fish

Recipe "1" -- "1" Fish
MenuItem "1" -- "1" Recipe

Order "1" *-- "1..*" OrderItem
OrderItem "1" -- "1" MenuItem
Order "1" -- "1" Bill
Bill "1" -- "1..*" OrderItem

Restaurant "1" -- "0..*" InventoryItem
Restaurant "1" -- "0..*" MenuItem
Restaurant "1" -- "0..*" Order

RestaurantAnalytics "1" -- "1" Restaurant
@enduml